# BRENDApyrser

./: .gitignore  BRENDA_database.ipynb  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTES.md  README.ipynb  README.md  code_oven.py  parseBRENDA.py  pyproject.toml  script.py  setup.py  test_brendapyrser.py  updateREADME.bat
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  docker.yml  docs.yml  draft-pdf.yml  joss.yml  tests.yml
brendapy/: py_brenda.py  requirements.txt
brendapyrser/: __init__.py  constants.py  parser.py  py_brenda.py
code_oven/: script.py
docs/: examples.ipynb
envs/: brendapyrser-dev.yml
examples/: examples.ipynb
mcp/: .env.example  .gitignore  README.md  pyproject.toml
mcp/examples/: enzyme_kinetics_agent.py
mcp/src/brenda_mcp/: __init__.py  server.py  service.py
mcp/tests/: smoke_test.py
paper/: links  paper.bib  paper.md
src/brendapyrser/: __init__.py  constants.py  parser.py
tests/: tests.py
tests/fixtures/: brenda_sample.json
