[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brendapyrser"
version = "0.1.0"
description = "Tools to parse the BRENDA database"
license = "Apache-2.0"
authors = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
maintainers = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/robaina/BRENDApyrser"
repository = "https://github.com/robaina/BRENDApyrser"
documentation = "https://robaina.github.io/BRENDApyrser"
keywords = ["BRENDA", "metabolism", "enzymes", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
]
packages = [{ include = "brendapyrser", from = "src" }]
[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.24"
pandas = ">=1.5"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # mccabe complexity
    "W605", # ASCII art, verbatim text
]

[tool.ruff.isort]
known-first-party = ["brendapyrser"]
